--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div class="chef-img">
     </div>
 </div>
-<div id="menus" class="restaurant-menus">
+<div id="menus" class="restaurant-menus bg-slide" data-image-width="1862" data-image-height="828">
     <div class="container">
         <div class="menus">
             <div class="menu-information">
@@ -152,7 +152,7 @@
         </div>
     </div>
 </div>
-<div class="second-menu">
+<div class="second-menu bg-slide" data-image-width="1862" data-image-height="866">
     <div class="container">
         <div class="second-menu-information">
             <h2>Farm to Table</h2>
@@ -180,7 +180,7 @@
         <p>Emma Brown, LA</p>
     </div>
 </div>
-<div class="review-image">
+<div class="review-image bg-slide" data-image-width="1862" data-image-height="713">
 </div>
 <div id="contact" class="contact">
     <div class="container">
@@ -307,6 +307,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+<script src="js/jquery.ba-throttle-debounce.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
