--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     </div>
 </div>
 <div id="menus" class="restaurant-menus bg-slide" data-image-width="1862" data-image-height="828">
+    <div class="background"></div>
     <div class="container">
         <div class="menus">
             <div class="menu-information">
@@ -153,6 +154,7 @@
     </div>
 </div>
 <div class="second-menu bg-slide" data-image-width="1862" data-image-height="866">
+    <div class="background"></div>
     <div class="container">
         <div class="second-menu-information">
             <h2>Farm to Table</h2>
@@ -167,7 +169,9 @@
             <button>Go To Menus</button>
         </div>
     </div>
-    <div class="second-menu-img"></div>
+    <div class="second-menu-img bg-slide" data-image-width="1862" data-image-height="866">
+    <div class="background"></div>
+    </div>
 </div>
 <div id="reviews" class="review">
     <div class="container">
@@ -181,6 +185,7 @@
     </div>
 </div>
 <div class="review-image bg-slide" data-image-width="1862" data-image-height="713">
+    <div class="background"></div>
 </div>
 <div id="contact" class="contact">
     <div class="container">
@@ -307,7 +312,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
-<script src="js/jquery.ba-throttle-debounce.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
